# goit-pythonweb-hw-12

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 511c0af5209b_add_refresh_token.py  76f0c497879b_add_user_roles.py  a2d9bff87125_removed_contacts_constraint.py  a39272d90d93_add_password_reset_token.py  bc5b7e9409dd_init.py  fa5321c95e24_add_user.py  fd5beadae4f6_add_to_model_user_filed_confirmed.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/redis/: redis.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
src/services/templates/: reset_password_email.html  verify_email.html
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_utils.py  test_users_repository_unit.py
